# logiisound

./: .gitignore  CMakeLists.txt
assets/: amplifier.json
src/: main.cpp
src/audio/engine/: AudioEngine.cpp  AudioEngine.hpp
src/audio/processors/: AddProcessor.cpp  AddProcessor.hpp  ChainProcessor.cpp  ChainProcessor.hpp  CircuitProcessor.cpp  CircuitProcessor.hpp  FilePlayer.cpp  FilePlayer.hpp  GainProcessor.cpp  GainProcessor.hpp  Processor.cpp  Processor.hpp  ScopeProcessor.cpp  ScopeProcessor.hpp  SineGenerator.cpp  SineGenerator.hpp  SquareGenerator.cpp  SquareGenerator.hpp  SwitchProcessor.cpp  SwitchProcessor.hpp
src/audio/processors/customs/: PedalProcessors.cpp  PedalProcessors.hpp
src/circuits/: Capacitor.cpp  Capacitor.hpp  CapacitorModel.cpp  Circuit.cpp  Circuit.hpp  Component.cpp  Component.hpp  ComponentModel.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  Diode.cpp  Diode.hpp  DiodeModel.cpp  DiodeModel.hpp  Resistor.cpp  Resistor.hpp  ResistorModel.cpp  ResistorModel.hpp  VoltageSource.cpp  VoltageSource.hpp  VoltageSourceModel.cpp
src/circuits/factories/: CapacitorFactory.cpp  CapacitorFactory.hpp  ComponentFactory.cpp  ComponentFactory.hpp  DiodeFactory.cpp  DiodeFactory.hpp  NPNFactory.cpp  NPNFactory.hpp  NonComponentFactory.cpp  NonComponentFactory.hpp  ResistorFactory.cpp  ResistorFactory.hpp  VoltageSourceFactory.cpp  VoltageSourceFactory.hpp
src/circuits/ics/: IntegratedCircuit.cpp  IntegratedCircuit.hpp
src/circuits/models/: CapacitorModel.cpp  CapacitorModel.hpp  ComponentModel.cpp  ComponentModel.hpp  DiodeModel.cpp  DiodeModel.hpp  ResistorModel.cpp  ResistorModel.hpp  VoltageSourceModel.cpp  VoltageSourceModel.hpp
src/circuits/models/transistors/BJTs/: NPNModel.cpp  NPNModel.hpp
src/circuits/transistors/BJTs/: NPN.cpp  NPN.hpp  NPNModel.cpp
src/core/: Application.cpp  Application.hpp  CableHelper.cpp  CableHelper.hpp  CableManager.cpp  CableManager.hpp  CircuitSerializer.cpp  CircuitSerializer.hpp  Editor.cpp  Editor.hpp
